--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "main": "dist/index.js",
 "module": "dist/index.js",
 "files": [ "dist", "README.md" ],
+"repository": {
+  "type": "git",
+  "url": "git+https://github.com/abhigk/form-app.git"
+},
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
